Finalized Schimmel lecture

--- a/_posts/2015-10-20-schimmel.md
+++ b/_posts/2015-10-20-schimmel.md
@@ -1,43 +1,51 @@
 ---
 layout: post
 title: Thomas Schimmel, The big bang and the question of god (lecture)
+tags: culture religion
 ---
 
-- why is universe with laws and not lawless?
-- changed worldview ovet the last 70 years
-  - universe has beginning
-- general introductino on BT and cocmic background radiation
-- Einstein: what are god's thouths? the rest are details (spectra,...)
-- Planck: science and religiion complement each other
-- we see only shadows on the wall
-  - why? what if there's nothing more than the shadows
-  - analogy with radio waves (couldn't see them, they're there still)
-- God is for what we don't understand, such a god is not necessary
-  - agreed
-  - God is begin everything (derived from Einstein's quote)
-- Hisenberg: first sip of the science cup makes on atheistic, howevr, there's a
-  god on the bottom
-- universe is running a code that was not made in the universe
-- natural laws are discovered, not made
-  - where do they come from?
-  - who takes care they're still working?
-    - constness of fundamental constants?
-      - he sais: there'll be no people (hmm, controverse how narrow/wide the
-	livable range is)
-- let's say laws are given, and we can tune only those constants
+## Structure of the lecture
+
+These just raw notes from the lecture, interleaved with some of my
+questions/ideas.
+
+- Why is universe with laws and not lawless?
+- Changed worldview over the last 70 years.
+  - universe has beginning, not eternal
+- General introduction into BBT and cosmic background radiation.
+- Einstein: What are god's thoughts? The rest are just details (spectra,
+  element molar mass, ...)
+- Planck: Science and religiion complement each other.
+- We only see shadows on the wall.
+  - **Me** Why? What if there's nothing more than the shadows?
+  - Analogy with radio waves (couldn't see them, they're there still).
+- God is for what we don't understand, such a god is not necessary.
+  - **Me** Agreed.
+  - God is behind everything (derived from Einstein's quote)
+- Heisenberg: First sip of the science cup makes you atheistic, however,
+  there's god on the bottom of the cup.
+- Universe is running a code that was not made in the universe.
+- Natural laws are discovered, not made.
+  - Where do they come from?
+  - Who takes care they're still working?
+    - Constness of fundamental constants?
+      - There'll be no people otherwise.
+        - **Me** Hmm, controverse how narrow/wide the livable range is.
+- Let's say laws are given, and we can tune only those constants
   - aiming 1 cm target from 
-    - coupled with 1 km, Denmark, Moon, Sun demostrations of shooting
+    - 1 km, Denmark, Moon, Sun, ... (theatrical demonstrations of shooting)
     - after gradual prolongation he got to size of the universe
-  - me: you are not aiming, you just shoot and watch what follows
-  - what's the precise reasoning? did he explore whole state space?
-  - universe design just for us, but we are still smaller (compared to Earth,
+  - **Me** You are not aiming, you just shoot and watch what follows -- because
+    something always happens.
+  - **Me** What's the precise reasoning? Did he explore whole state space?
+  - Universe designed just for us, but we are negligible (compared to Earth,
     Sun, galaxy, ...)
   - he is trying to impress us with super great/small numbers
     - universe doesn't care about us (music, emotions,... by Jacques Monod)
-  - (if he doesn'ŧ mention anthopologix principle, he is biased)
-  - me: why considering just life in the form as we know it, it could be so
-    much different
-- he is quoting Stephen Hawking
+  - **Me** If he doesn't mention anthropic principle, he is biased. Yes, he was.
+  - **Me** Why considering just life in the form as we know it, it could be so
+    much different.
+- He is quoting Stephen Hawking
   - only the part where he is amazed by the precise settings of the constants
   - still regards him as an atheist
 
@@ -45,7 +53,7 @@ title: Thomas Schimmel, The big bang and the question of god (lecture)
   - again making impressions with Avogadro constant
   - he is comparing water molecules to human products (how reliably the stick
     to laws of nature)
-    - breath count taken by Ceaser in his life == no. of Ceasar's molucules in a
+    - breath count taken by Caesar in his life == no. of Caesar's molecules in a
       sigle breath today
   - talking about sparsity of matter in an atom
 
@@ -56,13 +64,16 @@ title: Thomas Schimmel, The big bang and the question of god (lecture)
   - sending a message to god (assumes limit of light speed)
   - we don't have to find the god, he'll come to us -- he became one of us as
     Jesus Christ
-    - me: why on our Earth, how did he find us, on that little planet
+    - **Me** Why on our Earth, how did he find us, on that little planet?
   - James Irwin: landing on the Moon is nothing compared to coming of Jesus Christ
 - Jesus Christ: whoever comes to me, I'll not reject him (his explanation -- we
   are free to do our observation science)
 
-- students of FF are not supposed to understand and speak English
+- **Me** Students of FF are not supposed to understand and speak English.
 
+## Authentic comments
+
+(In Czech only, written by me and my friend on shared keyboard.)
 
 tak to mě teda zklamalo... to co jsi mohl vidět byla metoda Baroko... fascinace
 vším možným, zlatem a pozlátkem... a pak fascinované lidi oddělat dvouma větami
