--- a/_posts/2015-10-27-zelenka.md
+++ b/_posts/2015-10-27-zelenka.md
@@ -9,42 +9,42 @@ not read this before if you want to enjoy all the details of the movie!**
 
 ## Plot
 *This is a linearized version of the plot. In the movie it was shown in a
-different order to achieve greater effect.*
+different order to achieve a greater effect.*
 
 A group of Czech filmmakers decided to shoot a movie with unclear idea what
 genre and topic it should be.
 They know, they want to cooperate with French producers, their first idea is to
 shoot a "biography" based on confused memories of an old secretary/chamberlain
-of Eduard Daladier about the background of Munich agreement.
+of Eduard Daladier about the background of the Munich agreement.
 Yet before start of the shooting, the French actor representing the chamberlain
 falls down with a serious condition,
 thus they substitute the character with a French speaking parrot (everything
 else staying the same, i.e. it lived with Daladier).
 
-They schedule to shoot the movie for two months, first month in the Czech
+They schedule to shoot the movie for two months, the first month in the Czech
 republic, the second month in France.
 Soon after start, the actor portraying the main character (a journalist
 interviewing the parrot) develops allergy to feather and later is unable to
 continue shooting at all.
-They have to use various workarounds to create illusion the actual actor and
-the parrot are acting together.
+They have to use various workarounds to create the illusion that the actual
+actor and the parrot are acting together.
 It seems that problems of the main actor could be caused by the Munich topic
 itself, so they start digging in the topic and present an alternative
 interpretation of the Munich agreement and they'd like to somehow insert it
 into the originally comedy movie.
 
-The shooting is encountering many other troubles, which climaxes when the
+The shooting is encountering many other troubles, which climax when the
 director realizes the French cooperation was just a trick of the producer to
 raise more money for the movie. 
 Unfortunately, he was not successful -- so they are acutely missing money.
-They tell the rest of the team they were deceived by the French party and some
-of the more pissed off members of the team demonstrate their hatred on the
+They tell to the rest of the team they were deceived by the French party and
+some of the more pissed off members of the team demonstrate their hatred on the
 French parrot and his French teacher/manager.
-Finishing the movie is heavily jeopardized and only few team-members persist.
+Finishing the movie is heavily jeopardized and only few team-members continue.
 
-What is more, one of the actors had a car accident and so the movie makers can
-communicate to public that they can't finish the movie because of his dead
-(although it was clear they won't finish it anyway).
+What is more, one of the actors had a fatal car accident and so the movie
+makers can communicate to public that they can't finish the movie because of
+his dead (although it was clear they won't finish it anyway).
 And that's the happy end!
 
 ## Characters
@@ -87,7 +87,9 @@ And that's the happy end!
       (parrot's agent demands specific working conditions)
     * government vs ordinary people (diplomacy, mobilisation)
   * self-reference,, non-linearity, recursion
-    * Polski film, Trhák, Pupl Fiction
+    * Polski film, Trhák 
+  * non-linearity
+    * Pulp Fiction
   * relation of a man and animal
   * exaggeration of typical movie pathos
     * original movie plot is summarized at the end of the real movie in few
