PhD: random fixes

--- a/_posts/2015-12-28-phd.md
+++ b/_posts/2015-12-28-phd.md
@@ -31,7 +31,7 @@ have a PhD degree at all.
 ### I don't want to have higher education than my boss
 
 I've heard this few times and it's true in most cases, however, I don't see
-why it'd should be perceived negatively.
+why it should be perceived negatively.
 
 ### Being a PhD student your budget is low
 
@@ -63,7 +63,10 @@ I decided not to go to PhD studies, because:
   * I was sure, I didn't want to be a scientist/stay in academia,
   * I considered the potential improvement of the qualification equivalent to
     the experience you learn in the industry,
-  * I know people who are cool/successful even without a PhD degree.
+  * I know people who are cool/successful even without a PhD degree,
+  * I wouldn't [finish on time][thesis].
+
+[thesis]: {% post_url 2015-10-11-thesis-fail %}
 
 Later, I found a thorough [summary of a CS PhD graduate][blog] that quite fits
 what I discovered myself and elaborates on some points in more detail.
