--- a/_posts/2015-05-07-memset.md
+++ b/_posts/2015-05-07-memset.md
@@ -14,4 +14,7 @@ tags: programming
       * explicitly indicates what we are doing with the structure
       * prone to leaving out some members -> hard to hunt non-deterministic bugs
     * conclusion:
-      * **Prefer memset.**
+      * <del>**Prefer memset.**</del>
+      * **[Use calloc.][1]**
+
+[1]: https://matt.sh/howto-c#_never-use-malloc
