--- a/_posts/2016-01-12-r1b-problem.md
+++ b/_posts/2016-01-12-r1b-problem.md
@@ -34,15 +34,15 @@ list][2].
 ## Moral rules
 
 Your religion should be based on some moral rules.
-If you, for instance, draft such a rules that praise only yourself, it won't
+If you, for instance, draft such rules that praise only yourself, it won't
 last long and soon you'll find there's too big competition among such systems.
 There is a complex field of study [how to design such rules][3] and since it is
-constructed it shouldn't be a problem to adapt for any person (provided they
-have the necessary theoretical background).
+logically constructed it shouldn't be a problem to grasp them for any person
+(provided they have the necessary theoretical background).
 
 [3]: https://en.wikipedia.org/wiki/Game_theory
 
-It is always good to also implement some form a [reinforcement learning][4] for
+It is always good to implement some form a [reinforcement learning][4] of 
 these rules. Here you can exploit various [superficial][5] [stimuli][6].
 
 ## Fuse against erosion
@@ -50,15 +50,15 @@ these rules. Here you can exploit various [superficial][5] [stimuli][6].
 Typically you deploy the religion via oral tradition or prophets.
 For it to last long enough to collect the one billion believers, you need to
 design fuses against erosion.
-Quite reliable is declaration of the [last prophet][7], beware that this method
-is applicable when you have final version of the religion, it's difficult to
-introduce new patches afterwards.
-You may find [inquisition][8] more comfortable way of control after deployment.
+Quite reliable is the declaration of the [last prophet][7], beware that this
+method is applicable when you have final version of the religion ready. 
+It's difficult to introduce new patches afterwards.
+You may find the [inquisition][8] a more comfy way of control after deployment.
 
 ## A book
 
 Create a manual (see [Books](#books)).
-However, don't be too explicit. Use allegories and don't be afraid to make it a
+However, don't be too explicit. Use allegories and don't be afraid to make it
 poetry to further blur the meaning and broaden possible interpretations.
 
 ## Social stabilisation
@@ -71,7 +71,7 @@ can protest against it.
 
 Avoid any [single points of failure][10] and be sure you make everything as
 distributed as possible (see, the omnipresent god is a useful idea).
-Making a [single place super-holy][11], doesn't really scale well.
+Making a single random [place super-holy][11], doesn't really scale well.
 
 [4]: https://en.wikipedia.org/wiki/Reinforcement_learning
 [5]: https://en.wikipedia.org/wiki/Afterlife
