various grammary and typo fixes

--- a/_posts/2016-01-31-fosdem.md
+++ b/_posts/2016-01-31-fosdem.md
@@ -4,7 +4,7 @@ title: FOSDEM 2016
 tags: ['travel', 'open source']
 ---
 
-[The first part](#day0) dedcribes traveller's experience in Bruxelles.
+[The first part](#day0) describes traveller's experience in Bruxelles.
 Then I wrote few points for each lecture I visited on [Saturday](#day1)
 and [Sunday](#2), most importantly there are some **tocheck** marks for topics
 that are at least worth googling.
@@ -70,7 +70,7 @@ Assorted impressions and thoughts from my first day in Belgium (ever):
   * I saw the Atomium from the train and my my brain is now copyrighted :-)
 
 ### FOSDEM beer-event
-  * Traditional visit of the Delirium Café -- high througput (cl\|p)ub -- tens
+  * Traditional visit of the Delirium Café -- high throughput (cl\|p)ub -- tens
     of taps, many fasses and pipings.
   * FOSDEM visitors almost DDoS'd it (no one was denied a beer :-) -- you
     couldn't move inside and tens (maybe few hundreds) people were overflowing
@@ -137,7 +137,7 @@ Assorted impressions and thoughts from my first day in Belgium (ever):
     - LTS versions of the embedded SW
     - idea: can't it make OBS environment setup faster?
       - it's basically chroot with cached packages already
-    - curiosity: 40 yrs old nuclear pwplants in France, people keep such old
+    - curiosity: 40 yrs old nuclear powerplants in France, people keep such old
       computers to be able to rebuild the SW
 
 ### New horizons for the CRIU project
@@ -172,8 +172,8 @@ Assorted impressions and thoughts from my first day in Belgium (ever):
 
 ### Privacy and Tracking Protection in Firefox
   - corporate vs government surveillance
-    - notify government everytime you have new friend, new job, write a letter,
-      ...
+    - notify government every time you have a new friend, new job, write a
+      letter, ...
     - the users did it voluntarily
     - privacyinternational.org
   - privacy as a business model
@@ -204,7 +204,7 @@ Assorted impressions and thoughts from my first day in Belgium (ever):
 
 ### etcd: the cornerstone of distributed systems using Go
   - etc *d*istributed key-value storage, higher order systems building block
-  - v1 had consensus algorituhm with flaws, now it implemets Raft (**tocheck**
+  - v1 had consensus algorithm with flaws, now it implements Raft (**tocheck**
     paper: In Search of an Understandable Consensus Algorithm)
     - current version is 2.0, and 3.0 is coming
   - peers communicate using protobuf (**tocheck**)
@@ -212,7 +212,7 @@ Assorted impressions and thoughts from my first day in Belgium (ever):
   - API provides interesting operations for atomicity (compare and swap/delete)
   - application/motivation (within CoreOS project)
     - locksmith: CoreOS reboot lock after updates
-    - SkyDNS (DNS and service cofiguration, backed by etcd)
+    - SkyDNS (DNS and service configuration, backed by etcd)
     - vulcand: load balancer for microservices (it's stateless thanks to etcd)
   - Go experience
     - pro: rapid development, good concurrency
@@ -246,7 +246,7 @@ Assorted impressions and thoughts from my first day in Belgium (ever):
       - RSA handshake?, checking certificates
         - by default they are self-signed, or can be X.509
       - communication itself is enrypted with AES128
-  - imlemented as a daemon + client application
+  - implemented as a daemon + client application
     - client application can be crafted for another purpose
 
 ### Containers and virtualization
@@ -260,7 +260,7 @@ Assorted impressions and thoughts from my first day in Belgium (ever):
 ### How containers work in Linux
   - brief summary of history and purposes
   - importance of shared kernel
-    - updates, schedulling
+    - updates, scheduling
   - fruit of 2011 agreement on virtualization/namespaces API
     - cgroups (controllers), namespaces
     - API is terrible (with exception of network ns (`ip netns`))
