Teremin: grammar + finalization

--- a/_posts/2016-03-04-teremin.md
+++ b/_posts/2016-03-04-teremin.md
@@ -5,59 +5,62 @@ tags: culture
 ---
 
 **Spoiler alert: Following text contains topics and plot of the play Teremin.
-Reading them can attenuate your theater experience.**
+Reading that can attenuate your theater experience.**
 
 ## Plot
 
-Lev Sergejeviš Teremin comes to the USA with apparent intent to perform with
+Lev Sergejevič Teremin comes to the USA with apparent intent to concert with
 his newly invented electric musical instrument teremin.
-We are also introduced to his manager Goldstein (a German) who strives to
-improve his public image by telling a story how Teremin impressed Lenin by
-playing the electric instrument (remember GOELRO) -- we realize he had
-concerted previously in the Soviet Union.
+He is accompanied by his manager Goldstein (a German) who builds their public
+image image by telling a story how Teremin impressed Lenin when
+playing the electric instrument (remember GOELRO) in his office. Teremin had
+concerted already in the Soviet Union prior coming to the USA.
 
 What is revealed later is that he is also an agent (forced though) of Soviet
 intelligence and they want him to "infiltrate" US industry by launching serial
 production of teremins.
 
-Teremin founds the electric orchestra to expand his popularization efforts. He
+Teremin founds the electric orchestra to support his popularization efforts. He
 is accompanied by his manager Goldstein, musical polyglot Schillinger and
-Samuel Goldstein. Interestingly, Goldstein was originally hired as a private
+Samuel Goldstein. Goldstein was originally hired as a private
 eye on Teremin by one of his fans -- later he is full-hearted member of the
 orchestra though.
 
-They organize a huge electric music concert at stadium for thousands of
-visitors. Goldstein admits the most of the audience are members of unions or
+They organize an unprecedented electric music concert at stadium for thousands
+of visitors. Goldstein admits the most of the audience are members of unions or
 supporters of the communist party.
 
 Teremin has success and RCA company agrees to produce teremins at mass scale
 and Teremin further exploits his inventor's skills with further little gadgets
 (lie detector, altimeter).
 
-Surprisingly, the RCA's plans coincide with the Black Tuesday and the following
-Great Depression. Teremin's businesses are bankcrupt, he has debts and his fame
-fades away. He is even not interesting for the Soviet intelligence anymore, so
-they stop directing him and they even allow his Russian wife to come to visit
-him in New York.
+(Un)surprisingly, the RCA's plans collide with the Black Tuesday and the
+following Great Depression. Teremin's businesses are bankcrupt, he has debts
+and his fame fades away. He is even not interesting for the Soviet intelligence
+anymore, so they stop commanding him and on top of that they allow his Russian
+wife to come to visit him in New York.
 
-Seemingly, Teremin is not in love with her (and later he even unilaterally
+Seemingly, Teremin is not in love with her (and later he actually unilaterally
 divorced her) and Teremin is revealing his real motivation.
 The teremin was not a musical instrument, it was intended as an wireless alarm
-for the Lenin's office and playing tones was just a side effect and other
-members of the orchestra are partly disappointed that they were part of a
-scam/dishonest enthusiasm (that was most hurting to the musician Schillinger).
+for the Lenin's office and playing tones was just a side effect. 
+Other members of the orchestra are somehow disappointed that they were part of
+a scam/dishonest enthusiasm (that was most hurting to the musician
+Schillinger).
 The situation is getting more and more depressive and Teremin confesses to (his
-closest friend) Goldstein that the teremin is actually an eavesdropping device
-that was to be installed in the Lenin's office by the intelligence service --
-that also explains why Teremin was somehow extorted by the agents.
+closest friend) Goldstein that the teremin is can also work in reverse mode --
+turning sound into electromagnetic waves for the purposes of eavesdropping.
+The demo and consequent installation in the Lenin'đ office was devious plot of
+the intelligence service --
+that also explains why Teremin was entangled with the agents.
 
 Despite seriousness of the motives, it seems that Teremin is doing all that
 because he just enjoys "hacking" the electronic components and creating various
-gadgets. He denies that he would do that because of wealth, fame, family or
-women.
+gadgets. He denies that he would do that because of wealth, fame, family
+protection or women.
 
 The story ends by Teremin leaving the United States and going back to Russia
-and no one ever heard again of him.
+and no one ever heard of him again.
 
 ## Characters
 
@@ -75,13 +78,13 @@ of Teremin.
 
 Originally a waitress, later hired by Teremin as an assistant.
 She is a woman, a black and(!) physicist. And also a keen communist.
-This character doesn't fit into the realm of the play much and it's there
+This character doesn't fit much into the realm of the play and it's there
 rather for narrative purposes.
 
 ### Lucie
 
-A fan of Teremin, later they are lovers and she funds him thanks for the money
-she has from her husband who is probably a mafia member.
+A fan of Teremin, later they are lovers and she funds him with money she has
+from her husband who is probably a mafia member.
 
 ### Joseph Schillinger
 
@@ -93,16 +96,16 @@ prices) and he envisions automated production of music.
 ### Samuel Hoffmann
 
 Private eye, baseball player wannabe and poor musician, he's however happy to
-be thrown into the whole electic music thing.
+be dragged into the whole electic music thing.
 
 ### Other characters
-- Kateřina Teremin
+- Kateřina Teremin -- Teremin's wife
 - russian agents
-- servant
+- servant -- a former colleague of Levine, he's kind of racist
 
 
 ## Topics
-- money, economy (The Great Depression)
+- money, economy (The Great Depression, [Goldman's child(?) memories][hin])
 - communism
 	- Is Teremin a communist?
 - physics
@@ -123,28 +126,42 @@ be thrown into the whole electic music thing.
 	  explore what they were interested in, however, the stuff that they
 	  had equipment available for (and it was hard to obtain anyway).
 - mystification
-	- The story is based on real person and [stories][thing].
+	- The story is based on the [real person][lev] and [stories][thing].
 - Russion revolution, cleansings (natural death, heart sickness)
 - famine
 	- revolution eats its own children (backed by story of man and wife who
 	  ate their children in despair)
 
+[hin]: https://en.wikipedia.org/wiki/Hyperinflation_in_the_Weimar_Republic
+[lev]: https://en.wikipedia.org/wiki/L%C3%A9on_Theremin
 [thing]: https://en.wikipedia.org/wiki/The_Thing_%28listening_device%29
 
 ## Composition
 - on air label
+	- Stage decoration when Teremin is making an interview in radio.
+	  However, later it indicates that teremin boxes are transimitting.
 - applause to Soviet anthem
+	- Play ends with Teremin in the Soviet union and Soviet anthem is
+	  played. All audience was applauding to this (the actors actually).
 - frame (white sheets)
-- triple topic
-- great depression -- breakthrough
-	- antic tragedy scheme?
+	- Play begins and ends with everything covered under white sheets.
+- triple topic *not sure what I meant with this note*
+- classic tragedy composition
+	- exposition
+	- collision -- RCA contract
+	- crisis -- The Great Depression
+	- peripetia(?) -- wrecked Teremin
+	- tragedy -- return to Russia
 - looking at concert from behind
+	- Impressive scene when the theater audiance is actually at backstage
+	  and they are watching the electric orchestra playing concert for
+	  thousands of people.
 - educational cuts
 	- physics explanation
 	- personality explanation
 	- meetings with KGB
 - music
-	- real teremin
-	- stock market music
+	- real teremin (they actually play it)
+	- stock market music (pitch is correlated with stock price)
 	- rhythmicon (typewriter)
 
