TdAH: finalize post

--- a/_posts/2016-08-03-tdah.md
+++ b/_posts/2016-08-03-tdah.md
@@ -9,58 +9,62 @@ tags: travel Slovakia Hungary Austria
   * boarding a night train to Slovakia with bicycles
   * scheduled departure 23:09 (actual departure about a quarter hour later)
   * sleeping on the train, not supercomfy but still better than plain seats
-  * bicycles locked in a different carriage
+  * bicycles hanging in a different carriage -- no problem (had locks)
 
 ## Day 01 (2016-07-25)
 
+  * **sleeping:** field near Taktakenéz (many mosquitos)
+  * **daily stats:** 105.78 km, 5:19:35, max 44.75 km/h, avg 19.86 km/h
   * visiting Tokaj (goulash with tarhonya, prominent hill with vineyards,
-    Tisza/Bodrog confluence)
+    Tisza+Bodrog confluence)
   * many villages host nests for storks
   * accident: Ivo hit Michal's rear wheel while drafting and fell off the bike,
     no serious injury luckily
-  * **sleeping:** field near Taktakenéz (many mosquitos)
-  * **daily stats:** 105.78 km, 5:19:35, max 44.75 km/h, avg 19.86 km/h
 
 ## Day 02 (2016-07-26)
 
+  * **morning:** wakeup: 7:00, departure: 9:00
+  * **sleeping:** 21:30, vineyard near Egerszalok
+  * **daily stats:** 113.47 km, 6:44:34, max 46.56 km/h, avg 16.83 km/h
   * Miskolc
     * observed a [whirlwind][ww] on Miskolc suburbs
     * quite a developed (indicated by renovated facades of panel houses)
       and large city (crowded streets)
   * passing the Bukki national park
     * long gradual climb (~10 km, 3%)
-    * after a rain, 100% moisture, persipertion didn't work
+    * after a rain, 100% moisture, perspiration didn't work
   * downhill ride ending in Eger
-    * the castle was closing when arrived
+    * the castle was closing when we arrived
     * groomed and crowded park with a fountain
   * the day we learnt about Hungarian public hydrants
     * very welcomed refreshment
-    * originally thought it's a pump, we were surprised by the stream intensity
-  * **morning:** wakeup: 7:00, departure: 9:00
-  * **sleeping:** 21:30, vineyard near Egerszalok
-  * **daily stats:** 113.47 km, 6:44:34, max 46.56 km/h, avg 16.83 km/h
+    * we originally thought it's a pump, we were surprised by the stream
+      intensity
 
 [ww]: https://en.wikipedia.org/wiki/Whirlwind
 
 ## Day 03 (2016-07-27)
 
-  * riding the pusztas (rather agricultural: sunflowers, corn)
-    * very flat terrain, straight road (like 5 kilometers without a turn),
-      burning under the sun
-    * melon loaded lorry
-  * in the evening we rode through a downpour (however we managed to dry
-    ourselves before arriving in Gödöllő)
-  * accident: Marek puncured his tube (actually pinched on a pothole)
   * **morning:** wakeup: 7:00, ready to go: 8:00 (a farmer in tractor was
     waiting for us to get out of the vineyard he was spraying), departure: 9:00
   * **sleeping:** 19:00 arrival in Gödöllő, 21:00 arrival in Budapest by train,
-    sleeping in [hostel][bb]
+    sleeping in a [hostel][bb]
   * **daily stats:** 107.41 km, 6:21:45, 50.75 km/h, avg 16.88 km/h
+  * riding the (former) pusztas (agricultural: sunflowers, corn)
+    * very flat terrain, straight road (like 5 kilometers without a turn),
+      burning under the sun
+    * melon-loaded lorry
+  * in the evening we rode through a downpour (however we managed to dry
+    ourselves before arriving in Gödöllő)
+  * accident: Marek punctured his tube (actually pinched on a pothole)
 
 [bb]: http://www.budbudgethostel.com/
 
 ## Day 04 (2016-07-28)
 
+  * **morning:** wakeup: 8:00
+  * **sleeping:** staying one more night at the hostel
+  * **daily stats:** 0 km, 0:00:00, max NaN km/h, avg NaN km/h
   * due to rainy weather we decided to stay in the city one more day (unplanned)
   * sightseeing in Buda and Pest
     * synagogue, basilica of St. Stephan
@@ -69,40 +73,41 @@ tags: travel Slovakia Hungary Austria
   * in the evening looking for a typical Hungarian food
     * criteria: local cuisine, no tablecloth, no blinking neon signs, low price
     * result: Turkish fast food (Istanbul Török Étterem)
-  * **morning:** wakeup: 8:00
-  * **sleeping:** staying one more night at the hostel
-  * **daily stats:** 0 km, 0:00:00, max NaN km/h, avg NaN km/h
 
 ## Day 05 (2016-07-29)
 
-  * very flat terrain along the Mosoni-Duna river (see the maximum speed)
-  * luxurious dinner (goulash) in a pub near Austrian borders
-  * the border pass was guarded by Austrian police
-    * noticed significantly better road surface after entering Austria
-  * spectacular synchronized red blinking lights on array of wind turbines
   * **morning:** check out at 10:30, 11:28 train to Györ, departure at 15:00
   * **sleeping:** 21:30, vineyard few kilometers from the Neusiedlersee
   * **daily stats:** 73.95 km, 3:59:44, max 28.46 km/h, avg 18.51 km/h
+  * very flat terrain along the Mosoni-Duna river (see the maximum speed)
+  * bourgeois dinner (goulash) in a pub near Austrian borders
+  * the border pass was guarded by Austrian police
+    * we noticed significantly better road surface after entering Austria
+  * spectacular synchronized red blinking lights on array of wind turbines
 
 ## Day 06 (2016-07-30)
 
-  * 11:00 arrival to Polendorf port, 11:30 departure on a ship to Rust
-  * 16:00--17:00 "lunch" break in Mattersburg
-  * after navigating through the Neusiedlersee entering first hills
-  * first climb to monumental Forchenstein castle, the village was spread above
-    the castle though
-    * spotting probably the first refugee family
-  * we dodged a rain, seeing only wet asphalt
   * **morning:** wake up at 7:20, no breakfast, departure at 8:45 (eating by
     Polendorf grocery store)
   * **sleeping:** 20:30, playground in Kirchau
   * **daily stats:** 84.49 km, 5:22:48, max 64.65 km/h, avg 15.70 km/h
+  * 11:00 arrival to Polendorf port, 11:30 departure on a ship to Rust
+  * after navigating through the Neusiedlersee entering first hills
+  * 16:00--17:00 "lunch" break in Mattersburg
+  * first climb to monumental Forchenstein castle, the village was spread above
+    the castle though
+    * spotting probably the first refugee family
+  * we dodged rain, seeing only wet asphalt
 
 ## Day 07 (2016-07-31)
 
-  * going the Mariazell Wanderweg (via Gleschner pass) -- it's a hiking path,
+  * **morning:** wake up at 7:00, departure at 9:45 (cooking oatmeal)
+  * **sleeping:** unplanned interrupt 19:50 in Terz village due to thunderstorm,
+    occupying a niche of a barn-like building
+  * **daily stats:** 74.52 km, 5:21:52, max 63.47 km/h, avg 13.89 km/h
+  * going the Mariazell Wanderweg (via Gscheidl pass) -- it's a hiking path,
     not for bicycles
-    * almost every tree in the forest bears a sign of pilgrims (we saw none though)
+    * almost every tree in the forest bears a sign of pilgrims (that we didn't see though)
   * bathing in the Salza river
   * hitting a heavy rain with thunderstorm
     * lesson learnt:
@@ -110,46 +115,41 @@ tags: travel Slovakia Hungary Austria
       * cycling shoes soak so much water -- consider shoe cover
       * taillight isn't waterproof -- breaking the on/off button
       * SA bags aren't fully waterproff neither
-  * **morning:** wake up at 7:00, departure at 9:45 (cooking oatmeal)
-  * **sleeping:** unplanned interrupt 19:50 in Terz due to thunderstorm,
-    occupying a niche of a barn-like building
-  * **daily stats:** 74.52 km, 5:21:52, max 63.47 km/h, avg 13.89 km/h
 
 ## Day 08 (2016-08-01)
 
-  * impressive visit of Mariazell basilica (there was a church service at that moment)
-  * brunch in Mariazell Billa; the town is well equipped for tourists (e.g. Slav youth)
-  * picturesque Salza river valley
-    * clean quickly flowing river with high mountains above and nice road along
-    * this is why you go to the Alps
-    * we hit another heavy rain, fortunately we were almost dry when reaching
-      the overnight place
-    * popular also among canoeist (et al)
-  * later continuing along the Enns river
-    * many water powerplants
   * **morning:** wake up at 7:20, departure at 10:30 (drying our stuff on
     asphalt), departure from Mariazell at 13:00
   * **sleeping:** 20:20, meadow/field near Altenmarkt above Enns river
-    occupying a niche of a barn-like building
   * **daily stats:** 104.68 km, 5:24:49, max 55.91 km/h, avg 19.34 km/h
+  * impressive visit of Mariazell basilica (there was a church service at that moment)
+  * brunch in Mariazell Billa; the town is well equipped for tourists (e.g. Slav youth)
+  * picturesque Salza river valley
+    * clean quickly flowing river with high mountains above and quality road along
+    * this is why you go to the Alps
+    * popular also among canoeist (et al)
+  * we hit another heavy rain, fortunately we were almost dry when reaching the
+    overnight place
+  * later continuing along the Enns river
+    * many water power plants
 
 ## Day 09 (2016-08-02)
 
+  * **morning:** wake up ??, departure at 10:20 
+  * **sleeping:** 21:00, camp by the Pleshingersee (27 €, 4 persons, 2 tents)
+  * **daily stats:** 112.86 km, 5:57:10, max 56.93 km/h, avg 18.96 km/h
   * riding along the Enns river, actually quite hilly (valley wider and hills lower)
   * Steyr -- lunch in a restaurant, nice historical center
   * continuing on a flat cycling path to Danube confluence
   * sprinting in heavy headwind through industrial suburbs of Linz only to
-    realize there are no hostels in Linz and returning along the river to a
-    camp
-  * **morning:** wake up ??, departure at 10:20 
-  * **sleeping:** 21:00, camp by the Pleshingersee (27 €, 4 persons, 2 tents)
-  * **daily stats:** 112.86 km, 5:57:10, max 56.93 km/h, avg 18.96 km/h
+    realize there are no hostels in Linz and returning along the river back to
+    a camp
 
 ## Day 10 (2016-08-03)
 
+  * **morning:** wake up ??, departure at 8:45 
+  * **daily stats:** 14.06 km, 1:13:26, max 27.95 km/h, avg 11.49 km/h
   * sightseeing in Linz
     * very large cathedral -- actually largest in Austria
   * taking a direct train to Prague (departure 11:30)
-  * **morning:** wake up ??, departure at 8:45 
-  * **daily stats:** 14.06 km, 1:13:26, max 27.95 km/h, avg 11.49 km/h
 
