Attach Tok report

--- a/_posts/2016-09-28-tok.md
+++ b/_posts/2016-09-28-tok.md
@@ -1,3 +1,9 @@
+---
+layout: post
+title: Tok
+hidden: true
+---
+
 - very strong headwind
 - exhausted by 60th km (despite having lunch in a pub)
 - main climb started around 80th km
@@ -10,3 +16,4 @@
 - concrete ground in the middle of forests (with some connected ways)
   - wondering what was the purpose
 - there were warning sings around all paths (Oblast nebyla pyrotechnicky asanována)
+- there were marked tourist routes (yellow, blue) despite mapy.cz don't show them
