Add reading periods to books

--- a/_posts/2016-03-20-demons.md
+++ b/_posts/2016-03-20-demons.md
@@ -7,6 +7,8 @@ title: Demons (novel)
 *I'm busy, so I'm publishing this entry just as the WIP draft, probably
 forever.*
 
+Reading period: Jan--Feb 2016.
+
 ## Plot
 
 - Part I
